test number of users online in terminal

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -93,3 +93,10 @@ body {
 .content {
   flex: 8;
 }
+
+.users-online {
+  float: right;
+  font-size: 18px;
+  padding: 0 10px;
+  line-height: 60px;
+}
